# Converters

./: .gitignore  README.md  pyproject.toml
converter/: converter_hap.py  converter_mvl.py  converter_nmd.py
example_files/: Al.hap  FS.mss  Membrane2_03.mvl
